samples/_failures_safe/1761652526_98e3c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99294de9.c: In function ‘main’:
./samples/SAFE/__tmp_99294de9.c:171:5: error: expected declaration or statement at end of input
  171 |     printf("=====================\n");
      |     ^~~~~~
